# nn_from_scratch_extended

./: .clang-format  .gitmodules  ActivationFunctions.cpp  ActivationFunctions.h  Alias.h  CMakeLists.txt  ConvLayer.cpp  ConvLayer.h  Dropout.cpp  Dropout.h  Except.cpp  Except.h  Flatten.h  InputDataset.cpp  InputDataset.h  LRScheduler.cpp  LRScheduler.h  Layer.cpp  Layer.h  LossFunctions.cpp  LossFunctions.h  MaxPool.cpp  MaxPool.h  Metrics.cpp  Metrics.h  Network.cpp  Network.h  Optimizer.cpp  Optimizer.h  README.md  Test.cpp  Test.h  TrainHistory.h  WeightInit.h  main.cpp
